# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.167 2005/09/06 04:42:37 agaffney Exp $

*GLI-gtkfe-0.2 (13 Aug 2005)

  5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  file list is refreshed on "Refresh" or set host from mirror list
  ftp support in URI browser
  hide TreeView column header

  4 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  add FileBrowser.py and modify Stage.py to use it.
  add mirror list browsing

  3 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  sub-progress bar
  change 'etc_files' to 'self.etc_files' in RcDotConf
  set subprogress bar text to "Working..." after each pulse
  change pulse rate to 0.03

  1 Sep 2005; Preston Cody <codeman@gentoo.org>
  hack to fix gtkfe to write rc.conf in the etc_files structure.
  do the same fix for make.conf

  21 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  begin readying for gettext stuff
  make OK button in PartProperties default
  fix missing 'self'
  add GPL header to all files
  changed GNOME to gnome in ExtraPackages
  automatically call CC.start_failure_cleanup() on failure

  21 Aug 2005; John N. Laliberte <allanonjl@gentoo.org>
  Overhaul of ExtraPackages.py.  Now fully integrated into the backend.

  20 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  add ability to create reiserfs, xfs, and jfs
  fixed timezone loading

  17 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  change finish to Install on InstallSummary.py
  disable USE selection if GRP install

  16 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  add validate_uri() checks to Stage.py and PortageTree.py
  CD snapshot URI automaticaly filled in for PortageTree.py
  force sync method to "snapshot" and snapshot URI on CD for dynamic-stage3

  13 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  add check for 0MB partition

  10 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>