@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.167 2005/09/06 04:42:37 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.168 2005/09/13 18:57:31 agaffney Exp $
 
 *GLI-gtkfe-0.2 (13 Aug 2005)
+
+  13 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  FileBrowser is now URIBrowser
+  change URIBrowser to take gtk.Entry object as an argument
+  add URIBrowser to PortageTree.py
 
   5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   file list is refreshed on "Refresh" or set host from mirror list
